--- a/TNTScaleServiceInstaller/packages.config
+++ b/TNTScaleServiceInstaller/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ASquare.WindowsTaskScheduler" version="1.6.0.0" targetFramework="net452" />
   <package id="Costura.Fody" version="1.6.2" targetFramework="net452" developmentDependency="true" />
   <package id="Fody" version="2.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="TaskScheduler" version="2.6.5" targetFramework="net452" />
 </packages>
